save and load cookie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">notion-android</string>
+    <string name="shp_name">SHP</string>
+    <string name="key">cookies</string>
 </resources>
